🧭👝 Updated with Glitch

--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <title>Final Project</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
-      /* Styling Only Related To THIS Page */
+       
     </style>
   </head>
   <body>
@@ -25,13 +25,13 @@
       <li style="float: right">
         <a target="_blank" href=""
           ><img
-            src="https://img.icons8.com/win10/512/FFFFFF/instagram-new.png"
+            src="https://mail.google.com/mail/u/0/popout?ver=5zq5c8u2b847#attid%253Datt_19712f49bf933b8b_0.1_a8d79f39_af50ded3_aca0218c_976f5ef7_196a8cd2%25252FIMG_3611.jpg"
             style="width: 25px; margin: -5px"
         /></a>
       </li>
     </ul>
     <!-- ⬇⬇⬇⬇⬇⬇ Main Page Content -->
     <h1>Resume</h1>
-
-  </body>
+<img src="https://cdn.glitch.global/cc8a55ce-fc6e-4dec-92ea-3eb779b16dc2/deleteeee.jpg?v=1748528637330" alt="Girl in a jacket" width="500" height="600">
+ </body>
 </html>
