--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
       /* Styling Only Related To THIS Page */
       .parent-flex {
         display: flex;
-        background-color: purple;
+        background-color: darkred;
         align-items: center;
         justify-content: space-around;
         margin-bottom: 50px;
@@ -19,7 +19,7 @@
         padding: 20px;
       }
       .child-flex p {
-        background-color: pink;
+        background-color: darkred;
         padding: 20px;
         margin: 20px;
       }
@@ -52,38 +52,46 @@
     <h1>About Me</h1>
     <div class="parent-flex">
       <div class="child-flex">
-        <img
-          src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
-        />
+        <html>
+<body>
+
+<h1>Felix</h1>
+
+<video width="320" height="240" controls>
+  <source src="https://cdn.glitch.me/cc8a55ce-fc6e-4dec-92ea-3eb779b16dc2/delte.mov?v=1748527777195" type="video/mp4">
+ 
+</video>
+
+</body>
+</html>
+
       </div>
       <div class="child-flex">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
+          I love horses
         </p>
       </div>
     </div>
     <div class="parent-flex">
       <div class="child-flex">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
+           I enjoy horseback riding
         </p>
       </div>
       <div class="child-flex">
-        <img
-          src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
-        />
+       <!DOCTYPE html>
+<html>
+<body>
+
+<h1>Momo</h1>
+
+<video width="320" height="240" controls>
+  <source src="https://cdn.glitch.global/cc8a55ce-fc6e-4dec-92ea-3eb779b16dc2/delete.mov?v=1748527147723" type="video/mp4">
+ 
+</video>
+
+</body>
+</html>
       </div>
     </div>
   </body>
