--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Select ONE Additional Feature to Add
       https://www.w3schools.com/howto/howto_css_parallax.asp*/
       .parallax {
         /* The image used */
-        background-image: url("https://cdn.glitch.global/66249578-345e-4e9c-8fac-cabe98f682e4/image0.jpeg?v=1747657278943");
+        background-image: url("https://media.tenor.com/xDKmOyBg0h4AAAAe/emoji-feet.png");
 
         /* Set a specific height */
         min-height: 500px;
@@ -45,7 +45,7 @@ Select ONE Additional Feature to Add
         display: flex;
       }
       .child-flex {
-        background-color: green;
+        background-color: darkred;
         margin: 30px;
         padding: 10px;
         text-align: justify;
@@ -87,24 +87,16 @@ Select ONE Additional Feature to Add
     <div class="textblock parent-flex">
       <div class="child-flex para-1">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
+          My name is Laylah, this is my introduction. I enjoy Horseback riding, horses, and sushi
         </p>
       </div>
       <div class="child-flex">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
+          Contact:
+         School email: Laylahm5@nycstudents.net
+          insta: _autumnlay
+          
+          
         </p>
       </div>
     </div>
