🏑🛒 Updated with Glitch

--- a/art.html
+++ b/art.html
@@ -8,7 +8,7 @@
       /* Styling Only Related To THIS Page */
       .parent-flex {
         display: flex;
-        background-color: purple;
+        background-color: darkred;
         justify-content: space-around;
         padding: 10px;
         margin-bottom: 20px;
@@ -48,19 +48,19 @@
 
     <div class="parent-flex">
       <img
-        src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
+        src="https://cdn.glitch.global/cc8a55ce-fc6e-4dec-92ea-3eb779b16dc2/delet.jpg?v=1748872537867"
       />
       <img
-        src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/IMG_3767.png?v=1746635392409"
+        src="https://cdn.glitch.global/cc8a55ce-fc6e-4dec-92ea-3eb779b16dc2/delete.jpg?v=1748872534411"
       />
     </div>
 
     <div class="parent-flex">
       <img
-        src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
+        src="https://cdn.glitch.global/cc8a55ce-fc6e-4dec-92ea-3eb779b16dc2/dele.jpg?v=1748872540527"
       />
       <img
-        src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/IMG_3767.png?v=1746635392409"
+        src="https://cdn.glitch.global/cc8a55ce-fc6e-4dec-92ea-3eb779b16dc2/del.PNG?v=1748872543138"
       />
     </div>
   </body>
