--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="aboutme.html">About Me</a></li>
       <li><a href="art.html">Art</a></li>
-      <li><a class="active" href="resume.html">Resume</a></li>
+      <li><a class="active" href="Me.html">Me</a></li>
       <li style="float: right">
         <a target="_blank" href=""
           ><img
@@ -31,7 +31,7 @@
       </li>
     </ul>
     <!-- ⬇⬇⬇⬇⬇⬇ Main Page Content -->
-    <h1>Resume</h1>
+    <h1>Me</h1>
 <img src="https://cdn.glitch.global/cc8a55ce-fc6e-4dec-92ea-3eb779b16dc2/deleteeee.jpg?v=1748528637330" alt="Girl in a jacket" width="500" height="600">
  </body>
 </html>
