--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!-- Final Project
 Requirements
-[  ] Customized HTML Page #1
-[  ] Customized HTML Page #2 
-[  ] Customized HTML Page #3
-[  ] Customized HTML Page #4
+[ yes ] Customized HTML Page #1
+[ yes ] Customized HTML Page #2 
+[ yes ] Customized HTML Page #3
+[ yes ] Customized HTML Page #4
 
 Select ONE Additional Feature to Add  
-[ no ] Feature 1 - Google Font
+[ yes ] Feature 1 - Google Font
 [ no ] Feature 2 - Upload a Font
 [ no ] Feature 3 - Include jQuery
 [ no ] Feature 4 - Embed Code from Spotify/Google Docs/YouTube
@@ -16,6 +16,13 @@ Select ONE Additional Feature to Add
 <!DOCTYPE html>
 <html>
   <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="utf-8" />
     <title>Final Project</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
